# rscode

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cast.js  package-lock.json  package.json  tsconfig.json
crates/rscode-bindgen/: Cargo.toml
crates/rscode-bindgen/src/: main.rs
src/: extension.ts  gen_sample.rs  lib.rs  types.rs
src/vscode/: mod.rs
