[package]
name = "rscode-bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_common = { version = "0.29.37", features = ["tty-emitter"] }
swc_ecma_ast = "0.100.1"
swc_ecma_parser = "0.130.3"
